<resources>
    <string name="app_name">DigitalHouseFoods</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="or">OR</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="name">Name</string>
    <string name="detalhe_prato">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusant doloremque laudantium,totam rem aperiam eaque ipsa, quae ab illo inventore veritatis.</string>
    <string name="erro_senha">Informe a senha</string>
    <string name="erro_email">Informe o email</string>
    <string name="erro_nome">Informe o nome</string>
    <string name="minimo_senha">Minimo 6 caracteres</string>
    <string name="senhas_diferentes">Senhas diferentes</string>
</resources>